cluster/apps/joplin/joplin/joplin-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: joplin-db
  namespace: joplin
spec:
  ports:
    - name: joplin-db
      port: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/instance: joplin-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-db
  namespace: joplin
  labels:
    app.kubernetes.io/instance: joplin-db
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: joplin-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: joplin-db
    spec:
      restartPolicy: Always
      containers:
        - name: joplin-db
          image: postgres:15.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: joplin-db
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: joplin-db-vol
      volumes:
        - name: joplin-db-vol
          persistentVolumeClaim:
            claimName: joplin-db-pvc
---
