cluster/apps/joplin/joplin/joplin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: joplin
spec:
  ports:
    - name: joplin
      port: 22300
      targetPort: 22300
  selector:
    app.kubernetes.io/instance: joplin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  namespace: joplin
  labels:
    app.kubernetes.io/instance: joplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: joplin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: joplin
    spec:
      restartPolicy: Always
      containers:
        - name: joplin
          image: florider89/joplin-server:2.13.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 22300
              name: joplin-port
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: joplin
  namespace: joplin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`joplin.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: joplin
          namespace: joplin
          port: 22300
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
